syntax = "proto3";
package temperature;

option go_package = "./protobuf";

service Greeter {
    rpc GetTemperature (City) returns (Temperature) {}
}

message City {
    string name = 1;
}

message Temperature {
    message TempRange {
        int32 Max = 1;
        int32 Min = 2;
    }
    message TempInfo {
        string Day = 3;
        TempRange tempRang = 4;
    }

    repeated TempInfo temmpInfos = 4;
}
